# zephyr

doc/releases/: release-notes-4.5.rst
drivers/wifi/nxp/: Kconfig.nxp  nxp_wifi_drv.c
modules/hostap/src/: supp_api.c
samples/net/wireless/coex/central_ht/: CMakeLists.txt  README.rst  prj.conf
samples/net/wireless/coex/central_ht/nxp/: overlay_wifi_hostap_rw612.conf  overlay_wifi_rw612.conf
samples/net/wireless/coex/peripheral_ht/: CMakeLists.txt  README.rst
samples/net/wireless/coex/peripheral_ht/boards/: mimxrt1060_evk_mimxrt1062_qspi_C.overlay
samples/net/wireless/coex/peripheral_ht/nxp/: overlay_wifi_hosted_mcu.conf
samples/net/wireless/coex/shell/: CMakeLists.txt  Kconfig  README.rst
samples/net/wireless/coex/shell/nxp/: overlay_ot_host_rcp_rw612.conf  overlay_wifi_hostap_hosted_mcu.conf  overlay_wifi_hostap_rw612.conf  overlay_wifi_iw610.conf  overlay_wifi_rw612.conf
samples/net/wireless/coex/tester/: CMakeLists.txt  README.rst
samples/net/wireless/coex/tester/boards/: mimxrt1060_evk_mimxrt1062_qspi_C.overlay
samples/net/wireless/coex/tester/nxp/: overlay_wifi_hostap_hosted_mcu.conf  overlay_wifi_hosted_mcu.conf  overlay_wifi_iw610.conf  overlay_wifi_rw612.conf
